añadidos nuevos assets

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,15 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
     - assets/img/mars.png
+    - assets/img/earth.png
+    - assets/img/jupiter.jpg
+    - assets/img/mercury.png
+    - assets/img/moon.png
+    - assets/img/neptune.png
+    - assets/img/pluton.png
+    - assets/img/saturn.png
+    - assets/img/urano.png
+    - assets/img/venus.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -63,3 +72,5 @@ flutter:
       fonts:
         - asset: assets/fonts/Poppins-SemiBold.ttf
           weight: 600
+        - asset: assets/fonts/Poppins-Regular.ttf
+          weight: 400
